# webloc-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  webloc.rb
crate/webloc/: Cargo.toml
crate/webloc-cli/: Cargo.toml
crate/webloc-cli/src/: main.rs
crate/webloc-utils/: Cargo.toml
crate/webloc-utils/src/: release.rs
crate/webloc/src/: lib.rs
