[package]
name = "webloc-cli"
version = "1.1.1"
edition = "2021"

[profile.release]
strip = true
lto = true

[[bin]]
name = "webloc"
path = "src/main.rs"

[dependencies]
plist = "1"
url = "2"

[dependencies.clap]
version = "3"
features = ["derive"]

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["from"]

[dependencies.webloc]
path = "../webloc"

[dependencies.wheel]
git = "https://github.com/fenhl/wheel"
branch = "main"
default-features = false
