[package]
name = "webloc-cli"
version = "1.1.1"
edition = "2021"

[[bin]]
name = "webloc"
path = "src/main.rs"

[dependencies]
plist = "1"
thiserror = "1"
url = "2"

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.webloc]
path = "../webloc"

[dependencies.wheel]
git = "https://github.com/fenhl/wheel"
branch = "main"
default-features = false
