[package]
name = "webloc-utils"
version = "1.1.0"
edition = "2018"

[[bin]]
name = "webloc-release"
path = "src/release.rs"

[dependencies]
async-trait = "0.1"
itertools = "0.10"
semver = "1"
serde_json = "1"
tempfile = "3"

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["from"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "trust-dns"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["fs", "process"]

[dependencies.webloc]
path = "../webloc"

[dependencies.wheel]
git = "https://github.com/fenhl/wheel"
branch = "main"
